--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+ie<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -39,9 +39,9 @@
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;h3&gt;Project Title 1&lt;/h3&gt;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;iframe src="https://www.youtube.com/embed/your_video_id" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</p>
-<p class="p2"><span class="Apple-converted-space">    </span></p>
+<p class="p2"><span class="Apple-converted-space">    </span></p> 
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;div class="video"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;h3&gt;Project Title 2&lt;/h3&gt;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>&lt;h3&gt;Finding Freddie 2&lt;/h3&gt;</p>
 <p class="p1"><span class="Apple-converted-space">      </span>&lt;iframe src="https://www.youtube.com/embed/your_video_id2" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</p>
 <p class="p2"><span class="Apple-converted-space">    </span></p>
