--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Your Headline Goes Here</h2>
         <p>Your short description goes here.</p>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/YOUR_MAIN_SHOWREEL" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/Dvdrk4Xlh7A?si=WngEF7j8AetTdC-q" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
