--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Joshua Sadler</h1>
         <nav>
             <a href="#work">Work</a>
             <a href="#about">About</a>
@@ -21,7 +21,7 @@
         <h2>Your Headline Goes Here</h2>
         <p>Your short description goes here.</p>
         <div class="video-container">
-            <iframe src="https://youtu.be/Dvdrk4Xlh7A?si=WngEF7j8AetTdC-q" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=Hf-cHNC6hRU" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
