--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Your Headline Goes Here</h2>
         <p>Your short description goes here.</p>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/watch?v=Hf-cHNC6hRU" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Hf-cHNC6hRU?si=tKSX8QBemHm_D1BM" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
