--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <section id="work" class="portfolio">
         <h2>My Work</h2>
         <div class="video-grid">
-            <iframe src="https://www.youtube.com/embed/VIDEO_1" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/VIDEO_2" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/VIDEO_3" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/VIDEO_4" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/VIDEO_5" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/VIDEO_6" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/-mJYyueZfd8?si=T2BInkOhHidfdWzN" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/rE23BWbSAAs?si=s8MAoR6ZjH5o_uS-" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/q9zqBB5AKTA?si=WZcX5vsgSZBVtdC-" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Hf-cHNC6hRU?si=tKSX8QBemHm_D1BM" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Dvdrk4Xlh7A?si=5LWMCiMGieomWOrr" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/1PeocadqbPE?si=gmjwsVE5EGki6ezE" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
