--- a/index.html
+++ b/index.html
@@ -18,38 +18,56 @@
     </header>
 
     <section class="hero">
-        <h2>Your Headline Goes Here</h2>
-        <p>Your short description goes here.</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/Hf-cHNC6hRU?si=tKSX8QBemHm_D1BM" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <h2>Editor & Creative Partner</h2>
+        <p>I help creators tell better stories</p>
+        
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/pbHpuvkYA1k?si=E63X0uFDLxZ6U5XM" frameborder="0" allowfullscreen></iframe>
+            </div>
+        
     </section>
 
     <section id="work" class="portfolio">
         <h2>My Work</h2>
+        <p>100M+ views on youtube alone</p>
         <div class="video-grid">
-            <iframe src="https://www.youtube.com/embed/-mJYyueZfd8?si=T2BInkOhHidfdWzN" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/rE23BWbSAAs?si=s8MAoR6ZjH5o_uS-" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/q9zqBB5AKTA?si=WZcX5vsgSZBVtdC-" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Hf-cHNC6hRU?si=tKSX8QBemHm_D1BM" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Dvdrk4Xlh7A?si=5LWMCiMGieomWOrr" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/1PeocadqbPE?si=gmjwsVE5EGki6ezE" frameborder="0" allowfullscreen></iframe>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/-mJYyueZfd8?si=T2BInkOhHidfdWzN" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/rE23BWbSAAs?si=s8MAoR6ZjH5o_uS-" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/q9zqBB5AKTA?si=WZcX5vsgSZBVtdC-" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/Hf-cHNC6hRU?si=tKSX8QBemHm_D1BM" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/Dvdrk4Xlh7A?si=5LWMCiMGieomWOrr" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/1PeocadqbPE?si=gmjwsVE5EGki6ezE" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>This is a longer section about your background, editing style, clients you've worked with, etc.</p>
+        <p>I’m a freelance video editor, writer, and content creator with a passion for storytelling. Storytelling is at the heart of everything I do — whether I’m editing, writing scripts, or directing, I believe great content starts with a great story.
+Over the years, I’ve worked with YouTube channels like Alex French Guy Cooking, Mike Boyd Climbs, and Joy of Languages, helping them grow by producing high-quality, engaging videos. My role includes everything from video editing and scriptwriting to on-set direction and presentation.
+What sets me apart is my hands-on approach to every project — I dive deep into each creator’s vision, making sure their voice shines through. Whether you're a cooking channel, an adventure creator, or a language-learning platform, I’m here to help you tell your story in the most engaging and authentic way possible.
+</p>
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
-        <p>Socials: <a href="#">Twitter</a>, <a href="#">Instagram</a>, <a href="#">YouTube</a></p>
+        <p>Email: joshuasadler@me.com</p>
+        <p>Socials: <a href="https://www.linkedin.com/in/joshua-sadler-edits">LinkedIn</a>, <a href="#">Fiverr</a>
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Joshua Sadler</p>
     </footer>
 </body>
 </html>
